Fix singular spacing issue on restaurant index (Tropisueno)

--- a/app/assets/stylesheets/components/restaurant_preview/restaurant_index.scss
+++ b/app/assets/stylesheets/components/restaurant_preview/restaurant_index.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   font-weight: normal;
   margin-top: 40px;
-  width: 450px;
+  width: 470px;
 }
 
 .restaurant-preview:first-child {
